# signal-cli-socket

./: .gitignore  README.md  example.py  publish.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
signal/: signal.py
signal_cli_socket/: signal_cli_socket.py
signal_cli_socket.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: signal_cli_socket.py
