[tool.poetry]
name = "signal-cli-socket"
version = "0.7"
description = "A package to use with the signal-cli made by AsamK."
authors = ["Nickwasused <contact.nickwasused.fa6c8@simplelogin.co>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/Nickwasused/signal-cli-socket"
documentation = "https://github.com/Nickwasused/signal-cli-socket"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent"
]
packages = [
    { include = "signal_cli_socket.py", from = "src" }
]

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Nickwasused/signal-cli-socket/issues"
"Documentation" = "https://github.com/Nickwasused/signal-cli-socket"